# LLFn

./: .gitignore  404.html  CNAME  CODE_OF_CONDUCT.md  LICENSE  README.md  citation.cff  example.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: main.yml  mkdocs.yml
advanced_features/: index.html
core_concept/: index.html
docs/: CNAME  advanced_features.md  core_concept.md  features.md  index.md  installation.md
examples/: ex_agent_tasks.py  ex_babyagi.ipynb  ex_predict_animal.py  ex_predict_animal_chat_model.py  ex_predict_animal_llm.py  ex_translate.py  ex_translate_chat_model.py  ex_translate_llm.py
features/: index.html
installation/: index.html
llfn/: __init__.py  llfn.py
search/: search_index.json
tests/: test_annotate.py  test_argument.py  test_simple_predict.py
