[tool.poetry]
name = "llfn"
version = "0.1.4"
description = "Build anything from a simple text-summarizer to complex AI agents with one common primitive: function"
authors = [
    "Sorawit Suriyakarn <thepsint@gmail.com>",
    "Paul Nattapatsiri <paul@bandprotocol.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = ">=0.0.235"
python-dotenv = ">=1.0.0"
openai = ">=0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
