[tool.poetry]
name = "llfn"
version = "0.1.6"
description = "Build anything from a simple text-summarizer to complex AI agents with one common primitive: function"
authors = [
    "Sorawit Suriyakarn <thepsint@gmail.com>",
    "Paul Nattapatsiri <paul@bandprotocol.com>",
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
langchain = ">=0.0.235"
openai = ">=0.27.0"

[tool.poetry.group.dev.dependencies]
mkdocs = "^1.4.3"
mkdocs-material = "^9.1.19"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
